--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "xssfilter": "^0.5.3"
   }
 }
